--- a/email_sending/main/templates/login.html
+++ b/email_sending/main/templates/login.html
@@ -1,5 +1,5 @@
 {%extends 'base.html'%}
 {%block title%} Registration Page{%endblock title%}
 {%block content%}
-
+    <h1>Login Page</h1>
 {%endblock content%}
